platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/arithmetic_add_valid.platter
start() {
	piece of a = id + 1;
	sip of a =  id + 1.0;
	chars of a = id + "chars";
	flag of a = up;
}