platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_139.platter
piece of candy = 1;
peanut = 0;

start(){
check(candy == 1){
} alt(candy == 2){
 }
}